<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvUserNameR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/etUserR"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:hint="@string/masukkan_username"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvPasswordR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/etPasswordR"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:ems="10"
            android:hint="@string/masukkan_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:ems="10"
            android:hint="@string/masukkan_alamat_email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tvNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/nama_lengkap" />

        <EditText
            android:id="@+id/etNama"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:ems="10"
            android:hint="@string/masukkan_nama"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvAsal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/asal_sekolah" />

        <EditText
            android:id="@+id/etAsal"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:ems="10"
            android:hint="@string/masukkan_asal_sekolah"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/alamat_tinggal" />

        <EditText
            android:id="@+id/etAlamat"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:ems="10"
            android:hint="@string/masukkan_alamat_tinggal"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:textSize="14sp"
            android:text="@string/simpan" />
    </LinearLayout>

</ScrollView>