<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="288dp"
        android:layout_height="173dp"
        android:layout_weight="1"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/logo_kominfo" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:text="@string/user_name" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:hint="@string/masukkan_username"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:ems="10"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/register" />
</LinearLayout>